Sync all content

--- a/content/resources/wgs-400s10.md
+++ b/content/resources/wgs-400s10.md
@@ -12,7 +12,9 @@ image_metadata:
     \ on Flickr.)"
   credit: Image courtesy of Pedro Cambra on Flickr.
   image-alt: Isabel Allende's autograph on two of her books
+learning_resource_types: []
 resourcetype: Image
 title: wgs-400s10.jpg
+type: OCWImage
 uid: f5dd4e79-349d-7996-3ccd-7112f83f71b0
 ---
