Sync all content

--- a/content/resources/wgs-400s10.md
+++ b/content/resources/wgs-400s10.md
@@ -13,6 +13,7 @@ image_metadata:
   credit: Image courtesy of Pedro Cambra on Flickr.
   image-alt: Isabel Allende's autograph on two of her books
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: wgs-400s10.jpg
 uid: f5dd4e79-349d-7996-3ccd-7112f83f71b0
